{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 1126,
  "lineage": "b6d92ba8-1825-27d9-c805-bacae89916a1",
  "resources": [
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:loadbalancer/app/tss-ebs-dev-new-alb/9d0c63e4ca380b1c",
            "arn_suffix": "app/tss-ebs-dev-new-alb/9d0c63e4ca380b1c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tss-ebs-dev-new-alb-363341652.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:911287867452:loadbalancer/app/tss-ebs-dev-new-alb/9d0c63e4ca380b1c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tss-ebs-dev-new-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03a12da178a6d144e",
              "sg-06944615e15229899"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnets": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-alb",
              "elasticbeanstalk:shared-elb-environment-count": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-alb",
              "Project": "tss-app",
              "elasticbeanstalk:shared-elb-environment-count": "1"
            },
            "vpc_id": "vpc-0975e41529fdd220e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:listener/app/tss-ebs-dev-new-alb/9d0c63e4ca380b1c/8728b540e4e92992",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No matching route",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:911287867452:listener/app/tss-ebs-dev-new-alb/9d0c63e4ca380b1c/8728b540e4e92992",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:loadbalancer/app/tss-ebs-dev-new-alb/9d0c63e4ca380b1c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-http"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-http",
              "Project": "tss-app"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc/vpc-0975e41529fdd220e",
            "cidr_block": "10.49.1.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0950c0e20ee844b2f",
                "cidr_block": "10.49.1.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e647ee8d8480a254",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0975e41529fdd220e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0304d76c6d3a598ae",
            "owner_id": "911287867452",
            "tags": {
              "Name": "myvpc01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:security-group/sg-02e70252a34c6d4cb",
            "description": "Security group for VPC Endpoints",
            "egress": [],
            "id": "sg-02e70252a34c6d4cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.49.1.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tss-ebs-dev-new-vpce-sg",
            "name_prefix": "",
            "owner_id": "911287867452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tss-ebs-dev-new-vpce-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-vpce-sg",
              "Project": "tss-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-0b00e1ec29001d5ba",
            "dns_entry": [
              {
                "dns_name": "vpce-0b00e1ec29001d5ba-l714bfsh.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b00e1ec29001d5ba-l714bfsh-us-east-1a.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b00e1ec29001d5ba-l714bfsh-us-east-1c.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b00e1ec29001d5ba-l714bfsh-us-east-1b.autoscaling.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "autoscaling.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z038918129PZRW9YH1S7C"
              },
              {
                "dns_name": "autoscaling.us-east-1.api.aws",
                "hosted_zone_id": "Z02201103VSVTTUJFITQ3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b00e1ec29001d5ba",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e6a053fd9fb67e2",
              "eni-065b3d1fc00c0620b",
              "eni-0dda0001f71b70443"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.autoscaling",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.112",
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "ipv4": "10.49.1.15",
                "subnet_id": "subnet-0db123d54c271e391"
              },
              {
                "ipv4": "10.49.1.244",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-asg-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-asg-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-061f298a9b553d0a1",
            "dns_entry": [
              {
                "dns_name": "vpce-061f298a9b553d0a1-sl996r27.cloudformation.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-061f298a9b553d0a1-sl996r27-us-east-1a.cloudformation.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-061f298a9b553d0a1-sl996r27-us-east-1c.cloudformation.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-061f298a9b553d0a1-sl996r27-us-east-1b.cloudformation.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "cloudformation.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02454121IO1CF5I77YWD"
              },
              {
                "dns_name": "cloudformation.us-east-1.api.aws",
                "hosted_zone_id": "Z02431772BDRYYD24IJRC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-061f298a9b553d0a1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0472d64113a5a0d4d",
              "eni-0896c8e79e530662d",
              "eni-0df03a95d8b5f97e6"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.cloudformation",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.254",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.53",
                "subnet_id": "subnet-0db123d54c271e391"
              },
              {
                "ipv4": "10.49.1.69",
                "subnet_id": "subnet-07f28a28b8830044b"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-cfn-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-cfn-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "eb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-066f7c9de9afa5a2b",
            "dns_entry": [
              {
                "dns_name": "vpce-066f7c9de9afa5a2b-yp33smk4.elasticbeanstalk.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-066f7c9de9afa5a2b-yp33smk4-us-east-1b.elasticbeanstalk.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-066f7c9de9afa5a2b-yp33smk4-us-east-1c.elasticbeanstalk.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-066f7c9de9afa5a2b-yp33smk4-us-east-1a.elasticbeanstalk.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "elasticbeanstalk.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z069056739E52OQ1DP0II"
              },
              {
                "dns_name": "elasticbeanstalk.us-east-1.api.aws",
                "hosted_zone_id": "Z02193391AAQ9SQGVBO0R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-066f7c9de9afa5a2b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-017e921b9911ccade",
              "eni-026a14d08527b66ea",
              "eni-031593db804e38876"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.elasticbeanstalk",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.125",
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "ipv4": "10.49.1.245",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.54",
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-eb-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-eb-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "eb_health",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-07ef067a7340ea4fa",
            "dns_entry": [
              {
                "dns_name": "vpce-07ef067a7340ea4fa-6bu3puhc.elasticbeanstalk-health.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07ef067a7340ea4fa-6bu3puhc-us-east-1c.elasticbeanstalk-health.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07ef067a7340ea4fa-6bu3puhc-us-east-1a.elasticbeanstalk-health.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07ef067a7340ea4fa-6bu3puhc-us-east-1b.elasticbeanstalk-health.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "elasticbeanstalk-health.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0690063X7U1QHW5YE5I"
              },
              {
                "dns_name": "elasticbeanstalk-health.us-east-1.api.aws",
                "hosted_zone_id": "Z02435362HR6U1U1YTIP3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07ef067a7340ea4fa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0080eea12366784e8",
              "eni-09d07f079b017a597",
              "eni-0f2cbe0dffe757b8a"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.elasticbeanstalk-health",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.21",
                "subnet_id": "subnet-0db123d54c271e391"
              },
              {
                "ipv4": "10.49.1.230",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.85",
                "subnet_id": "subnet-07f28a28b8830044b"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-eb-health-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-eb-health-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-04a55bd96deb54a14",
            "dns_entry": [
              {
                "dns_name": "vpce-04a55bd96deb54a14-mbedza4d.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a55bd96deb54a14-mbedza4d-us-east-1c.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a55bd96deb54a14-mbedza4d-us-east-1a.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a55bd96deb54a14-mbedza4d-us-east-1b.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0690364B7CC1ZA9JM3T"
              },
              {
                "dns_name": "ec2.us-east-1.api.aws",
                "hosted_zone_id": "Z02186611OVZIIY777XNE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04a55bd96deb54a14",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-012f8b1425a759648",
              "eni-0211e353984a8b780",
              "eni-085e3cfa21946e4ee"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.104",
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "ipv4": "10.49.1.233",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.49",
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-ec2-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-ec2-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-05fb2bfd2e2c1c148",
            "dns_entry": [
              {
                "dns_name": "vpce-05fb2bfd2e2c1c148-89apn6x7.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05fb2bfd2e2c1c148-89apn6x7-us-east-1c.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05fb2bfd2e2c1c148-89apn6x7-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05fb2bfd2e2c1c148-89apn6x7-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03795352RJHTE22B3XMH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05fb2bfd2e2c1c148",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-089b9574af361f57f",
              "eni-0a6a8040a7ab59dfa",
              "eni-0f3e9e18c2e6695d3"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.238",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.7",
                "subnet_id": "subnet-0db123d54c271e391"
              },
              {
                "ipv4": "10.49.1.80",
                "subnet_id": "subnet-07f28a28b8830044b"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-ec2-msg-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-ec2-msg-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-0d08b7052fda63252",
            "dns_entry": [
              {
                "dns_name": "vpce-0d08b7052fda63252-zvv291fp.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d08b7052fda63252-zvv291fp-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d08b7052fda63252-zvv291fp-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d08b7052fda63252-zvv291fp-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03910783VNMVGSMR5TTW"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0691245PMM89CINVS6G"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z02445681IP12CDN2P9BB"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z039109717GYKRV188ZAX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d08b7052fda63252",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0525525878364e66d",
              "eni-0da00f6437b03ad52",
              "eni-0ea8495c35063731f"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.101",
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "ipv4": "10.49.1.237",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.26",
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-logs-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-logs-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-008ac99a9a9e4ff3e",
            "dns_entry": [
              {
                "dns_name": "vpce-008ac99a9a9e4ff3e-7oczyme9.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-008ac99a9a9e4ff3e-7oczyme9-us-east-1a.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-008ac99a9a9e4ff3e-7oczyme9-us-east-1b.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-008ac99a9a9e4ff3e-7oczyme9-us-east-1c.monitoring.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "monitoring.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0244560HVU6CH4DRBE8"
              },
              {
                "dns_name": "monitoring.us-east-1.api.aws",
                "hosted_zone_id": "Z07008703UQ4XYD1RHCT3"
              },
              {
                "dns_name": "monitoring-fips.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02454371ZGIMEIIOKCZ0"
              },
              {
                "dns_name": "monitoring-fips.us-east-1.api.aws",
                "hosted_zone_id": "Z070086935CXDIK9DW6V"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-008ac99a9a9e4ff3e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a674033111f89cf6",
              "eni-0f58abea971c173c8",
              "eni-0fe4328ca5acda541"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.monitoring",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.242",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.57",
                "subnet_id": "subnet-0db123d54c271e391"
              },
              {
                "ipv4": "10.49.1.81",
                "subnet_id": "subnet-07f28a28b8830044b"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-monitoring-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-monitoring-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-0e62f4745922a7215",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e62f4745922a7215",
            "ip_address_type": "ipv4",
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0304d76c6d3a598ae"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "tss-ebs-dev-new-s3-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-s3-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_route_tables.all",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-0e4d48cd549a66453",
            "dns_entry": [
              {
                "dns_name": "vpce-0e4d48cd549a66453-un284jqv.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e4d48cd549a66453-un284jqv-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e4d48cd549a66453-un284jqv-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e4d48cd549a66453-un284jqv-us-east-1c.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06912662GG7YWBBJ0J9I"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z06903942HZOYHXQJ6YFX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e4d48cd549a66453",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0509d1b1455da9593",
              "eni-0602eb372dd564f35",
              "eni-0819a63348f874770"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.247",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.25",
                "subnet_id": "subnet-0db123d54c271e391"
              },
              {
                "ipv4": "10.49.1.96",
                "subnet_id": "subnet-07f28a28b8830044b"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-sqs-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-sqs-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-07c88cdc70e03105c",
            "dns_entry": [
              {
                "dns_name": "vpce-07c88cdc70e03105c-ghzfzeqh.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07c88cdc70e03105c-ghzfzeqh-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07c88cdc70e03105c-ghzfzeqh-us-east-1c.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07c88cdc70e03105c-ghzfzeqh-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06921343IP20DYPJUGDT"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z039005823FW5OXTI86QG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07c88cdc70e03105c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0096e49ea3f5dc162",
              "eni-034703f34ad8092bb",
              "eni-06b6b59cad7ba7bf7"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.111",
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "ipv4": "10.49.1.232",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.28",
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-ssm-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-ssm-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-0bfd69b610dc6207b",
            "dns_entry": [
              {
                "dns_name": "vpce-0bfd69b610dc6207b-9rzzaafd.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bfd69b610dc6207b-9rzzaafd-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bfd69b610dc6207b-9rzzaafd-us-east-1c.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bfd69b610dc6207b-9rzzaafd-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02417721HGT1LFO979HR"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z0233367C7IBOVO3MFRV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bfd69b610dc6207b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-073a8dc51d2785a9c",
              "eni-0788f54a6d07d851b",
              "eni-0c5a2192bae7881e4"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.103",
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "ipv4": "10.49.1.239",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.42",
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-ssm-msg-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-ssm-msg-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-03d7dc59852adc043",
            "dns_entry": [
              {
                "dns_name": "vpce-03d7dc59852adc043-10kk0vs2.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03d7dc59852adc043-10kk0vs2-us-east-1c.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03d7dc59852adc043-10kk0vs2-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03d7dc59852adc043-10kk0vs2-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z024367516KO8FE7YTC67"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z038046523HS93K9E3CQL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03d7dc59852adc043",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0177586d313c732b7",
              "eni-02b3303fd35634909",
              "eni-0ad4e990a2c8e047f"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02e70252a34c6d4cb"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.123",
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "ipv4": "10.49.1.252",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.40",
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Name": "tss-ebs-dev-new-sts-vpce"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-sts-vpce",
              "Project": "tss-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_object.app_artifact",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.elastic_beanstalk.aws_security_group.vpc_endpoints",
            "module.elastic_beanstalk.data.aws_region.current",
            "module.elastic_beanstalk.data.aws_vpc.selected",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.eb_service_role",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_enhanced_health",
            "module.iam_roles.aws_iam_role_policy_attachment.eb_managed_updates",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_multicontainer",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_s3_read",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_ssm_core",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_web_tier",
            "module.iam_roles.aws_iam_role_policy_attachment.ec2_worker_tier",
            "module.iam_roles.data.aws_iam_policy_document.eb_assume",
            "module.iam_roles.data.aws_iam_policy_document.ec2_assume",
            "module.s3.aws_s3_bucket.this",
            "module.s3.aws_s3_bucket_public_access_block.this",
            "module.s3.aws_s3_bucket_versioning.this",
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:security-group/sg-06944615e15229899",
            "description": "ALB security group for tss-app dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06944615e15229899",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tss-ebs-dev-new-alb-sg",
            "name_prefix": "",
            "owner_id": "911287867452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-alb-sg",
              "Project": "tss-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:security-group/sg-0368631587b737428",
            "description": "EB EC2 security group for tss-app dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0368631587b737428",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06944615e15229899"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tss-ebs-dev-new-ec2-sg",
            "name_prefix": "",
            "owner_id": "911287867452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tss-ebs-dev-new-ec2-sg",
              "Project": "tss-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}